crates/test-generator/tests/snapshots/ts/test_generated_false.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
false

AST:
(program
  (expression_statement
    (false "false")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
