crates/test-generator/tests/snapshots/ts/test_generated_flow_maybe_type.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const val1: ?string = null;

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "val1")
      type: (type_annotation
        (flow_maybe_type
          (predefined_type "string")
        )
      )
      value: (null "null")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:11 }, name: "val1", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
