crates/test-generator/tests/snapshots/ts/test_generated_generator_function_declaration.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
function* testFn2() { yield value9; }

AST:
(program
  (generator_function_declaration
    name: (identifier "testFn2")
    parameters: (formal_parameters)
    body: (statement_block
      (expression_statement
        (yield_expression
          (identifier "value9")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:11 to 1:18 }, name: "testFn2", definition_type: FunctionDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(true) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:29 to 1:35 }, name: "value9", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
