crates/test-generator/tests/snapshots/ts/test_generated_identifier.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
identifier

AST:
(program
  (expression_statement
    (identifier "identifier")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "identifier",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 11,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
